# carbonledger-bounty

./: .env.example  .gitignore  BOUNTY_WORK_TYPES.md  BUILD_SUMMARY.md  CAMPAIGNS_FRONTEND_INTEGRATION.md  CAMPAIGNS_IMPLEMENTATION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  Dockerfile.backend  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_ISSUE_23.md  ISSUE_12_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PR_MESSAGE.md  QUICKSTART.md  README.md  START_HERE.md  docker-compose.yml  fix.md
backend/: README.md  SUPPORT_API.md  SUPPORT_SETUP.md  SUPPORT_SYSTEM.md  package-lock.json  package.json
backend/prisma/: dev.db-journal  schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/analytics/: analytics.controller.ts  analytics.dto.ts  (+4 more)
contracts/: Cargo.toml  README.md
contracts/carbon_credit/: Cargo.toml
contracts/carbon_credit/src/: lib.rs
contracts/carbon_marketplace/: Cargo.toml
contracts/carbon_marketplace/src/: lib.rs
contracts/carbon_oracle/: Cargo.toml
contracts/carbon_oracle/src/: lib.rs
contracts/carbon_registry/: Cargo.toml
contracts/carbon_registry/src/: lib.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MENTORSHIP.md  REVIEW_SLA.md
frontend/: README.md  next.config.js  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DependencyGraph.tsx  PrerequisitesDisplay.tsx
frontend/lib/: api.ts  carbon-utils.ts  freighter.ts  matching-api.ts  portfolio-api.ts  wallet-errors.ts
frontend/styles/: design-system.ts
scripts/: deploy.sh
(+143 files in other folders)
