[workspace]
members = ["carbon_credit", "carbon_marketplace", "carbon_oracle", "carbon_registry"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
publish = false

[workspace.dependencies]
soroban-sdk = "21.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
